# heimdall

./: .env.example  .env.test  .gitignore  .safety-policy.yml  CLAUDE.md  Dockerfile  Dockerfile.test  Makefile  README.md  TESTING.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  pytest-integration.ini  pytest-postgres.ini  pytest-unit.ini  pytest.ini  requirements.txt  ruff.toml  test-db-simple.sh  test-postgres-manual.py
.github/workflows/: ci.yml
docs/: tech_assessment.md
migrations/: init-test.sql  init.sql
scripts/: run-integration-tests.sh  test-local.sh  test-postgres-working.sh
src/heimdall/: __init__.py
src/heimdall/application/: __init__.py  container.py  cqrs.py
src/heimdall/application/commands/: __init__.py  auth_commands.py
src/heimdall/application/dto/: __init__.py  auth_dto.py  token_dto.py
src/heimdall/application/queries/: __init__.py  auth_queries.py
src/heimdall/application/services/: auth_service.py
src/heimdall/application/use_cases/: __init__.py  auth_functions.py  login_use_case.py  logout_use_case.py  register_use_case.py  validate_token_use_case.py
src/heimdall/domain/: __init__.py
src/heimdall/domain/entities/: __init__.py  session.py  user.py
src/heimdall/domain/events/: __init__.py  base.py  user_events.py
src/heimdall/domain/repositories/: __init__.py  event_repository.py  read_repositories.py  session_repository.py  user_repository.py  write_repositories.py
src/heimdall/domain/services/: __init__.py  event_bus.py  token_service.py
src/heimdall/domain/value_objects/: __init__.py  email.py  password.py  session_id.py  token.py  user_id.py
src/heimdall/infrastructure/: __init__.py
src/heimdall/infrastructure/persistence/: __init__.py
src/heimdall/infrastructure/persistence/postgres/: __init__.py  database.py  dependencies.py  mappers.py  session_repository.py  user_repository.py
src/heimdall/presentation/: __init__.py
src/heimdall/presentation/api/: __init__.py  dependencies.py  health.py  main.py  routes.py  schemas.py
src/tests/integration/: README.md  conftest.py  test_cqrs_integration.py  test_infrastructure_demo.py
src/tests/integration/aux/: __init__.py  api_client.py  api_fixtures.py  api_helpers.py  base_test.py  database_fixtures.py  postgres_helpers.py  test_cqrs_integration.py  test_infrastructure.py  test_infrastructure_demo.py
src/tests/integration/postgres/: __init__.py  base_test.py  conftest.py  test_api_with_postgres.py  test_basic_connection.py  test_database_persistence.py  test_minimal.py  test_repository_direct.py
src/tests/integration/usecases/: __init__.py
src/tests/integration/usecases/commands/: __init__.py  test_user_login.py  test_user_registration.py
src/tests/integration/usecases/queries/: __init__.py  test_health_checks.py  test_service_discovery.py  test_token_validation.py
src/tests/unit/: test_cqrs.py  test_cqrs_error_handling.py  test_cqrs_functions.py  test_domain_events.py  test_entities.py  test_functional_use_cases.py  test_repository_interfaces.py  test_use_cases.py  test_value_objects.py
test-results/: integration-junit.xml
