[project]
name = "heimdall"
version = "0.1.0"
description = "High-performance distributed authentication and authorization system"
authors = [
    {name = "Heimdall Team"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "redis (>=6.4.0,<7.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
black = "^25.1.0"
ruff = "^0.12.11"
mypy = "^1.17.1"
httpx = "^0.28.1"
faker = "^37.6.0"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "S", "UP", "C4", "PT", "RUF", "PLW"]
ignore = [
    "N802",  # Factory functions (LoginRequest, etc.) intentionally capitalized
    "S104",  # Binding to 0.0.0.0 is intentional for containerized apps
    "S106",  # Hardcoded password detection false positive for "bearer" string
    "S107",  # Hardcoded password detection false positive for "bearer" token type
    "B008",  # FastAPI Depends() in function defaults is correct pattern
    "B904",  # Exception chaining in HTTP exception handlers is optional
    "PLW0603",  # Global statement needed for mock setup in dependencies
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # Allow assert statements in tests

